Update logo image paths for root index.html

--- a/public/src/nav.html
+++ b/public/src/nav.html
@@ -523,7 +523,7 @@
                         <div class="header-title-logo">
                             <a href="/" data-animation-role="header-element">
                                 <img elementtiming="nbf-header-logo-desktop" 
-                                     src="../assets/logo-videos/logo.png" 
+                                     src="public/assets/logo-videos/logo.png" 
                                      alt="ZG Nettoyage - Services de Nettoyage Professionnels" 
                                      style="display:block" 
                                      fetchpriority="high" 
@@ -587,7 +587,7 @@
                         <div class="header-title-logo">
                             <a href="/" data-animation-role="header-element">
                                 <img elementtiming="nbf-header-logo-mobile" 
-                                     src="../assets/logo-videos/logo.png" 
+                                     src="public/assets/logo-videos/logo.png" 
                                      alt="ZG Nettoyage - Services de Nettoyage Professionnels" 
                                      style="display:block" 
                                      fetchpriority="high" 
