--- a/public/src/footer.html
+++ b/public/src/footer.html
@@ -25,8 +25,8 @@
             <div class="footer-links">
                 <ul>
                     <li><a href="services.html">Nos Services</a></li>
-                    <li><a href="#faqs">FAQ</a></li>
-                    <li><a href="#before-after">Avant & Après</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="befor&after.html">Avant & Après</a></li>
                     <li><a href="about.html">À Propos</a></li>
                     <li><a href="contact.html">Nous Contacter</a></li>
                 </ul>
