--- a/public/src/nav.html
+++ b/public/src/nav.html
@@ -538,6 +538,9 @@
                         <div class="header-nav-wrapper">
                             <nav class="header-nav-list">
                                 <div class="header-nav-item header-nav-item--collection">
+                                    <a href="index.html" data-animation-role="header-element">Accueil</a>
+                                </div>
+                                <div class="header-nav-item header-nav-item--collection">
                                     <a href="services.html" data-animation-role="header-element">Services</a>
                                 </div>
                                 <div class="header-nav-item header-nav-item--collection">
@@ -547,7 +550,7 @@
                                     <a href="protfolio.html" data-animation-role="header-element">Portfolio</a>
                                 </div>
                                 <div class="header-nav-item header-nav-item--collection">
-                                    <a href="pricing.html" data-animation-role="header-element">Tarifs</a>
+                                    <a href="befor&after.html" data-animation-role="header-element">Résultats</a>
                                 </div>
                                 <div class="header-nav-item header-nav-item--collection">
                                     <a href="blog.html" data-animation-role="header-element">Blog</a>
@@ -625,7 +628,7 @@
             <a href="services.html">Services</a>
             <a href="about.html">À Propos</a>
             <a href="protfolio.html">Portfolio</a>
-            <a href="pricing.html">Tarifs</a>
+            <a href="befor&after.html">Résultats</a>
             <a href="blog.html">Blog</a>
         </nav>
         <div class="mobile-menu-cta">
