--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <link rel='icon' type='image/png' href='public/assets/fav_icon.png' />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Redirection…</title>
@@ -32,3 +33,4 @@
   </div>
 </body>
 </html>
+
