--- a/public/src/footer.html
+++ b/public/src/footer.html
@@ -36,7 +36,7 @@
         <div class="footer-divider"></div>
 
         <div class="footer-bottom">
-            Copyright ©ZG Nettoyage 2024. Dernière mise à jour Avril 2025. 
+            Copyright © Evolution Ltd 2024. Dernière mise à jour Avril 2025. 
             <a href="index.html">Index du Site</a>.
         </div>
     </div>
